<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.DetailTeamActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:layout_collapseMode="none">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_detail_team_logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/team_badge" />

                    <TextView
                        android:id="@+id/tv_detail_team_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_detail_team_logo"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="English Premier League" />

                    <TextView
                        android:id="@+id/tv_detail_team_formed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_detail_team_logo"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_team_name"
                        tools:text="1992" />

                    <TextView
                        android:id="@+id/tv_detail_team_origin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_detail_team_logo"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_team_formed"
                        tools:text="England" />

                    <ImageView
                        android:id="@+id/img_detail_team_web"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_detail_team_logo"
                        app:layout_constraintStart_toEndOf="@+id/img_detail_team_logo"
                        android:contentDescription="@string/web_logo" />

                    <ImageView
                        android:id="@+id/img_detail_team_facebook"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_detail_team_logo"
                        app:layout_constraintStart_toEndOf="@+id/img_detail_team_web"
                        android:contentDescription="@string/facebook_logo" />

                    <ImageView
                        android:id="@+id/img_detail_team_twitter"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_detail_team_facebook"
                        app:layout_constraintStart_toEndOf="@+id/img_detail_team_facebook"
                        android:contentDescription="@string/twitter_logo" />

                    <ImageView
                        android:id="@+id/img_detail_team_youtube"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_detail_team_twitter"
                        app:layout_constraintStart_toEndOf="@+id/img_detail_team_twitter"
                        android:contentDescription="@string/youtube_logo" />

                    <TextView
                        android:id="@+id/tv_detail_team_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_detail_team_logo"
                        tools:text="@string/lorem_ipsum" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_detail_team"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ToolbarTheme"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_detail_team_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/fav_logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_favorite_border" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_detail_team"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextColor="@color/colorAccentDark">


        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_detail_team"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <FrameLayout
        android:id="@+id/fl_detail_team_failed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_warning"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/network_error_try_again_in_few_minutes"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_detail_team_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>